quick fix z-index of main-menu, set to 1000.

--- a/learn_024-bygg.en.hemsida.med.html.och.css/css/main.css
+++ b/learn_024-bygg.en.hemsida.med.html.och.css/css/main.css
@@ -436,6 +436,7 @@ ol, ul {
         width: 100%;
         justify-content: space-between;
         margin-left: 3rem;
+        z-index: 1000;
     }
 
     .nav-link {
@@ -657,20 +658,12 @@ ol, ul {
     
     @media (width > 1400px) {
         padding-top: 15rem;
-        
+
         .more {
             margin-top: 15rem;
         }
     }
 }
-
-
-
-
-
-
-
-
 
 
 /* 
